<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookActivity">

    <TextView
        android:id="@+id/txtTitleAddBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/txtTittleAddBook"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/txtTittle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleAddBook" />

    <EditText
        android:id="@+id/EditTxtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Fabulas de Esopo"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtIsbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtIsbn"
        app:layout_constraintStart_toStartOf="@+id/txtTitle"
        app:layout_constraintTop_toBottomOf="@+id/EditTxtTitle" />

    <EditText
        android:id="@+id/EditTxtIsbn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="150"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@id/txtIsbn"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtAuthor"
        app:layout_constraintStart_toStartOf="@+id/txtIsbn"
        app:layout_constraintTop_toBottomOf="@+id/txtIsbn" />

    <EditText
        android:id="@+id/EditTxtAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtAuthor"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtEditorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtDate"
        app:layout_constraintStart_toStartOf="@+id/txtAuthor"
        app:layout_constraintTop_toBottomOf="@+id/txtAuthor" />

    <EditText
        android:id="@+id/EditTxtDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtEditorial"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtDescrption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtDescription"
        app:layout_constraintStart_toStartOf="@+id/txtEditorial"
        app:layout_constraintTop_toBottomOf="@+id/txtEditorial" />

    <EditText
        android:id="@+id/EditTxtDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtDescrption"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtPages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtPages"
        app:layout_constraintStart_toStartOf="@+id/txtDescrption"
        app:layout_constraintTop_toBottomOf="@+id/txtDescrption" />

    <EditText
        android:id="@+id/EditTxtPages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtPages"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtPhotoURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtPhotoURL"
        app:layout_constraintStart_toStartOf="@+id/txtPages"
        app:layout_constraintTop_toBottomOf="@+id/txtPages" />

    <EditText
        android:id="@+id/EditTxtPhotoURL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtPhotoURL"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddNewBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:tint="@color/colorWhite"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="35dp"
        app:srcCompat="?android:attr/textCheckMarkInverse" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFlotCanceled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:tint="@color/colorWhite"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/btnAddNewBook"
        app:layout_constraintEnd_toStartOf="@+id/btnAddNewBook"
        app:layout_constraintTop_toTopOf="@+id/btnAddNewBook"
        app:layout_constraintVertical_bias="0.0"
        app:maxImageSize="35dp"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>